--- a/force-app/main/default/lwc/heroInfo/heroInfo.css
+++ b/force-app/main/default/lwc/heroInfo/heroInfo.css
@@ -9,13 +9,23 @@ video {
     width: 100%;
 }
 
-.hero-center-default,
-.hero-center-left {
+.c-hero-center-default,
+.c-hero-center-left {
     top: 30%;
     left: 10%;
 }
 
-.hero-center-right {
+.c-hero-center-right {
     top: 30%;
     right: 10%;
+}
+
+div {
+    background-color: black;
+    opacity: 0.5;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
 }
