--- a/force-app/main/default/lwc/skateCard/skateCard.css
+++ b/force-app/main/default/lwc/skateCard/skateCard.css
@@ -1,11 +1,11 @@
 img.product {
     width: 100%;
-    margin-bottom: 0.5rem;
+    margin-bottom: 8px;
 }
 
 section {
     font-weight: bold;
-    font-size: 0.85rem;
-    margin-top: 0.75rem;
+    font-size: 16px;
+    margin-top: 12px;
     text-transform: uppercase;
 }
